devscripts (2.9.17) UNRELEASED; urgency=low

  * several Perl scripts: make sure we set the SIGPIPE handler before
    doing an open '-|'
  * bts: actually support the --sendmail option rather than just say we
    do!
  * bts: fix URI in manpage (Closes: #360783)
  * bts: fix unblock NNNNN by|with NNNNN handling (Closes: #361029)
  * debchange: add --qa option (Closes: #358278)
  * debdiff: check file permissions and new/deleted control files (Closes:
    #203781, #230702)
  * debdiff: option --controlfiles to allow comparing postinst
    etc. (Closes: #218222)
  * debrelease, debc, debi: support searching for .changes and .debs in a
    directory other than the parent of the currnent source directory with
    --debs-dir command line and DEBRELEASE_DEBS_DIR configuration file
    options (Closes: #309362)
  * mass-bug: new script (Closes: #355505)
  * pts-subscribe: fix config boilerplate to actually set default timeout
    (Closes: #360857)
  * pts-subscribe.1: improve the wording of the manpage (Closes: #360027)
  * uscan: *really* fix the uninitialized value bug (Closes: #356959)
  * uscan: provide downloadurlmangle and filenamemangle options to mangle
    the URL and filename before attempting to perform and save the
    download respectively (Closes: #327404)
  * uupdate: correct syntax error (Closes: #360995)
  * who-uploads: new script to determine most recent uploaders of a
    package to the Debian archive (Closes: #347809)

 -- Julian Gilbey <jdg@debian.org>  Fri,  7 Apr 2006 01:39:15 +0100

devscripts (2.9.16) unstable; urgency=low

  [ Julian Gilbey ]
  * Fix 2.9.15 changelog to refer to pts-subscribe, not pkg-subscribe
    (Closes: #353413)
  * bts: be stricter about bug number cruft (Closes: #356318)
  * bts: add spamreport as a synonym for reportspam
  * debcommit: add --help, --version
  * debdiff: fix unnecessary chdir (Closes: #354862)
  * debdiff: compare control files in multi-deb binary packages - this was